syntax = "proto3";
package snapchat.cdp.cof;
option optimize_for = CODE_SIZE;
option objc_class_prefix = "SCCof";
option csharp_namespace = "SnapProto.Snapchat.Cdp.Cof";

import "google/protobuf/wrappers.proto";
import "snapchat/cdp/cof/Benchmark.proto";
import "snapchat/common/SCCOMMONRuid.proto";

message SCCofConfigTargetingRequest {
    string configResultsEtag = 1;
    repeated .snapchat.cdp.cof.SCCofConfigTargetingRequest.Namespace namespacesArray = 2;
    string ghostId = 3;
    string countryCode = 4;
    int32 screenWidth = 5;
    int32 screenHeight = 6;
    .snapchat.cdp.cof.SCCofConnectivity connectivity = 7;
    int32 maxVideoWidthPx = 8;
    int32 maxVideoHeightPx = 9;
    repeated .snapchat.cdp.cof.BenchmarkResult benchmarkResultsArray = 10;
    bool deltaSync = 11;
    string userAgent = 12;
    .snapchat.cdp.cof.SCCofConfigTargetingRequest.SCCofConfigTargetingTriggerEventType triggerEventType = 13;
    .snapchat.cdp.cof.SCCofConfigTargetingRequest.SCCofConfigTargetingAppState appState = 14;
    string locale = 15;
    string deviceId = 16;
    string userId = 17;
    string clientIp = 18;
    bool isUnAuthorized = 19;
    string appLocale = 20;
    .snapchat.cdp.cof.SCCofConfigTargetingRequest.SCCofConfigTargetingInstrumentation instrumentation = 21;
    int64 lastSuccessfulSync = 22;
    bool isLogout = 23;
    string packageInstaller = 24;
    string syncTriggerBlizzardSessionId = 25;
    string syncExecutionBlizzardSessionId = 26;
    int32 cofSyncTriggerDelayFromStartupMs = 27;
    int32 cofSyncExecutionDelayFromStartupMs = 28;
    int64 syncTriggerTime = 29;
    .snapchat.cdp.cof.SCCofDecoderEncoderAvailablity decoderEncoderAvailability = 30;
    string snapkitAppId = 31;
    int32 lenscoreVersion = 32;
    .snapchat.common.SCCOMMONRuid ruid = 33;
    repeated string configNamesArray = 34;
    bool includeTestUserTreatments = 36;
    bool disableExposureLogging = 37;
    int32 lensClusterOrig4 = 38;
    string clientId = 39;
    enum SCCofConfigTargetingAppState {
        SCCofConfigTargetingAppState_UnknownAppState = 0;
        SCCofConfigTargetingAppState_Foreground = 1;
        SCCofConfigTargetingAppState_Background = 2;
    }
    enum SCCofConfigTargetingInstrumentation {
        SCCofConfigTargetingInstrumentation_DefaultInstrumentation = 0;
        SCCofConfigTargetingInstrumentation_UserAuthentication = 1;
    }
    enum Namespace {
        Namespace_Default = 0;
        Namespace_Camera = 1;
        Namespace_Cof = 2;
        Namespace_Mdp = 3;
        Namespace_Monetization = 4;
        Namespace_LegacyAb = 5;
        Namespace_AbStudyVersion = 6;
        Namespace_CameraPlatform = 7;
        Namespace_PlatformUi = 8;
        Namespace_PlatformCore = 9;
        Namespace_MonetizationUi = 10;
        Namespace_MonetizationRanking = 11;
        Namespace_UsersAndFriendsUi = 12;
        Namespace_UsersAndFriendsCore = 13;
        Namespace_UsersAndFriendsRanking = 14;
        Namespace_MessagingUi = 15;
        Namespace_MessagingCore = 16;
        Namespace_StoriesUi = 17;
        Namespace_StoriesCore = 18;
        Namespace_StoriesRanking = 19;
        Namespace_DiscoverUi = 20;
        Namespace_DiscoverCore = 21;
        Namespace_DiscoverRanking = 22;
        Namespace_PremiumContentUi = 23;
        Namespace_PremiumContentCore = 24;
        Namespace_PremiumContentRanking = 25;
        Namespace_CommunityUi = 26;
        Namespace_CommunityCore = 27;
        Namespace_CommunityRanking = 28;
        Namespace_CameraUi = 29;
        Namespace_CreativeToolsUi = 30;
        Namespace_CreativeToolsCore = 31;
        Namespace_CameraPlatformUi = 32;
        Namespace_CameraPlatformRanking = 33;
        Namespace_PerceptionUi = 34;
        Namespace_PerceptionCore = 35;
        Namespace_PerceptionRanking = 36;
        Namespace_MediaUi = 37;
        Namespace_MemoriesUi = 38;
        Namespace_MemoriesCore = 39;
        Namespace_MapUi = 40;
        Namespace_MapCore = 41;
        Namespace_SearchUi = 42;
        Namespace_SearchCore = 43;
        Namespace_SearchRanking = 44;
        Namespace_CognacUi = 45;
        Namespace_CognacCore = 46;
        Namespace_BitmojiUi = 47;
        Namespace_BitmojiCore = 48;
        Namespace_SpectaclesUi = 49;
        Namespace_SpectaclesCore = 50;
        Namespace_SnapKitUi = 51;
        Namespace_SnapKitCore = 52;
        Namespace_SnapProUi = 53;
        Namespace_SnapProCore = 54;
        Namespace_NgsUi = 55;
        Namespace_CameosUi = 56;
        Namespace_CameosCore = 57;
        Namespace_CameosRanking = 58;
        Namespace_BlizzardClient = 59;
        Namespace_BlizzardBackend = 60;
        Namespace_AbSegment = 61;
        Namespace_ConfigRollout = 62;
        Namespace_CommerceBackend = 63;
        Namespace_LensCore = 64;
        Namespace_CameraKitCore = 65;
        Namespace_MdpContentManager = 66;
        Namespace_RequestDomainRouting = 67;
        Namespace_CdnRouting = 68;
        Namespace_GrapheneSampling = 69;
        Namespace_WebStoryCore = 70;
        Namespace_WebStoryUi = 71;
        Namespace_ClientSwitchboard = 72;
        Namespace_Mcs = 73;
        Namespace_SharingUi = 74;
        Namespace_SharingCore = 75;
        Namespace_SharingRanking = 76;
        Namespace_MdpPlayback = 77;
        Namespace_CameraBusiness = 78;
        Namespace_Addlive = 79;
        Namespace_AdKitCore = 80;
        Namespace_AddliveUi = 81;
        Namespace_AddliveCore = 82;
        Namespace_AddliveRanking = 83;
        Namespace_StoryStudioLiteUi = 84;
        Namespace_StoryStudioLiteCore = 85;
        Namespace_CommerceUi = 86;
        Namespace_CommerceCore = 87;
        Namespace_CommerceRanking = 88;
        Namespace_StoriesUx = 89;
        Namespace_ContextUi = 90;
        Namespace_ContextCore = 91;
        Namespace_LensTargeting = 92;
        Namespace_SpotlightRanking = 93;
        Namespace_SpotlightCore = 94;
        Namespace_SpotlightUi = 95;
        Namespace_ActivationCore = 96;
        Namespace_Friending = 97;
        Namespace_Safety = 98;
        Namespace_Login = 99;
        Namespace_MylensesWebCore = 100;
        Namespace_Security = 101;
        Namespace_AbConsole = 102;
        Namespace_AdModeration = 103;
        Namespace_ContentLiftMeasurement = 104;
        Namespace_ContextBackend = 105;
        Namespace_GamesFeedCore = 106;
        Namespace_RecipientDeviceCapabilities = 107;
        Namespace_AdsGatewayCore = 108;
        Namespace_AdsInterfacesUi = 109;
        Namespace_AdsManagerUi = 110;
        Namespace_BusinessManagerUi = 111;
        Namespace_ProfileManagerUi = 112;
        Namespace_Notification = 113;
        Namespace_Billboard = 114;
        Namespace_LensDeliveryCore = 115;
        Namespace_Tier0Launch = 116;
        Namespace_FriendingReg = 117;
        Namespace_CameraKitWebCore = 118;
        Namespace_MdpOperaCore = 119;
        Namespace_SharedWebUi = 120;
        Namespace_CodelabsSandbox = 121;
        Namespace_FriendingQaRanking = 122;
        Namespace_FriendingRegRanking = 123;
        Namespace_SearchCsl = 124;
        Namespace_Web3 = 125;
        Namespace_PlusCore = 126;
        Namespace_WebStorytellerUi = 127;
        Namespace_PlatformServices = 128;
        Namespace_WebAccounts = 129;
        Namespace_ShopkitWeb = 130;
        Namespace_SnapgraphModserver = 131;
        Namespace_Music = 132;
        Namespace_Sounds = 133;
        Namespace_Machamp = 134;
        Namespace_PieAutobot = 135;
        Namespace_NotificationRanking = 136;
        Namespace_PieCup = 137;
        Namespace_MeshManagedDeployment = 138;
        Namespace_AdClient = 139;
        Namespace_PieAutobotReactive = 140;
        Namespace_DynamicDeeplinking = 141;
        Namespace_SnapchatWebUi = 142;
        Namespace_LensCoreConfig = 143;
    }
    enum SCCofConfigTargetingTriggerEventType {
        SCCofConfigTargetingTriggerEventType_UnknownEventType = 0;
        SCCofConfigTargetingTriggerEventType_ColdStart = 1;
        SCCofConfigTargetingTriggerEventType_WarmStart = 2;
        SCCofConfigTargetingTriggerEventType_ForegroundTrigger = 3;
        SCCofConfigTargetingTriggerEventType_BackgroundTrigger = 4;
    }
}

message SCCofConnectivity {
    .snapchat.cdp.cof.SCCofConnectivity.SCCofConnectivity_NetworkType networkType = 1;
    .google.protobuf.BoolValue isMetered = 2;
    .google.protobuf.BoolValue isRoaming = 3;
    string carrier = 4;
    enum SCCofConnectivity_NetworkType {
        SCCofConnectivity_NetworkType_UnknownNetworkType = 0;
        SCCofConnectivity_NetworkType_Cellular = 1;
        SCCofConnectivity_NetworkType_Wifi = 2;
    }
}

message SCCofDecoderEncoderAvailablity {
    bool isSnapVp9DecoderAvailable = 1;
    bool isSnapAv1DecoderAvailable = 2;
}